some progress on use cases

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -28,8 +28,8 @@
 Possible reader goals. Jeremy's suggestions:
 \begin{enumerate}
 	\item ???
-	\item ???
 	\item I no longer have to read the 100+ industry whitepapers, as they are summarized here.
+	\item We absorbed 100+ whitepapers and produced the ultimate whitepaper
 \end{enumerate}
 
 Scott's suggestions:
@@ -49,13 +49,9 @@ Scott's suggestions:
 
 %====================================================================
 
-\cite{small}
-
 \bibliographystyle{abbrv}
-\footnotesize
-\bibliography{bib/ref}
-\normalsize
-
+\bibliography{bib/bitcoin}
+\nocite{*}
 
 %====================================================================
 
