--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -1,4 +1,6 @@
-I\section{Results (Ben)}
+% !TEX root = ../main.tex
+
+\section{Results (Ben)}
 In our concept dependency graph, use cases depend on capabilities, which are specific high-level functions that blockchain can provide to solve real-world problems. In turn, capabilities are enabled by technological properties, which are provided by specific primitives. See Fig. XX for an example.  The primitive \primitive{hash chain} provides the property \techproperty{append-only transaction ledger}, which in conjunction with other properties enables the capability for \capability{internal auditability}. Use cases in the provenance family require internal auditability to ensure valid provenance trails.
 \textbf{TODO: figure showing graph and text style legend}
 
