--- a/paper/setup/packages.tex
+++ b/paper/setup/packages.tex
@@ -17,12 +17,24 @@
 
 % NOTE: IEEE does not allow algorithm2e
 
+%-------------------Fancy Table ----------------------%
+
+% = = = Rotated Table Entry \headrow
+
+\usepackage{adjustbox}
+\newcommand{\headrow}[1]{\multicolumn{1}{c}{\adjustbox{angle=45,lap=\width-0.5em}{#1}}}
+
+% = = = Table bullets: \full and \prt (full and part)
+
+\newcommand{\full}{$\bullet$}
+\newcommand{\prt}{$\circ$}
+
 %------------------------Packages----------------------%
 
 % = = = Graphics
-\usepackage[pdftex]{graphicx}
-\graphicspath{{figures/}}
-\DeclareGraphicsExtensions{.jpg,.png}
+%\usepackage[pdftex]{graphicx}
+%\graphicspath{{figures/}}
+%\DeclareGraphicsExtensions{.jpg,.png}
 
 % = = = Subfig (note not subfigure)
 \usepackage[caption=false,font=footnotesize]{subfig}
