--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -1,3 +1,5 @@
+% !TEX root = ../main.tex
+
 \section{Introduction (Rob/Arkady/Jeremy)}
 Short history of Bitcoin (1--2 paragraphs)
 	Summary of the research ideas that are part of Blockchain (Jeremy's article)
