--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1,20 +1,88 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-
-%% Created for Jeremy Clark at 2017-01-27 12:53:40 -0500 
+%% Created for Kaiser, Benjamin - 0553 - MITLL at 2018-02-14 13:00:10 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@inproceedings{Androulaki13,
+	Author = {Androulaki, Elli and Karame, Ghassan O. and Roeschlin, Marc and Scherer, Tobias and Capkun, Srdjan},
+	Booktitle = {Financial Cryptography and Data Security},
+	Date-Added = {2018-02-14 17:58:57 +0000},
+	Date-Modified = {2018-02-14 18:00:07 +0000},
+	Editor = {Sadeghi, Ahmad-Reza},
+	Pages = {34-51},
+	Publisher = {Springer Berlin Heidelberg},
+	Title = {Evaluating User Privacy in Bitcoin},
+	Year = {2013}}
+
+@article{Conti17,
+	Author = {Mauro Conti and Sandeep Kumar E and Chhagan Lal and Sushmita Ruj},
+	Date-Added = {2018-02-14 17:54:26 +0000},
+	Date-Modified = {2018-02-14 17:56:47 +0000},
+	Journal = {CoRR},
+	Title = {A Survey on Security and Privacy Issues of Bitcoin},
+	Volume = {abs/1706.00916},
+	Year = {2017}}
+
+@article{Goldfeder17,
+	Author = {Steven Goldfeder and Harry A. Kalodner and Dillon Reisman and Arvind Narayanan},
+	Date-Added = {2018-02-14 17:50:34 +0000},
+	Date-Modified = {2018-02-14 17:51:39 +0000},
+	Journal = {CoRR},
+	Title = {When the cookie meets the blockchain: Privacy risks of web payments via cryptocurrencies},
+	Volume = {abs/1708.04748},
+	Year = {2017}}
+
+@misc{cite-key,
+	Date-Added = {2018-02-14 17:48:04 +0000},
+	Date-Modified = {2018-02-14 17:48:04 +0000}}
+
+@misc{Castillo16,
+	Author = {Michael del Castillo},
+	Date-Added = {2018-02-14 17:41:25 +0000},
+	Date-Modified = {2018-02-14 17:45:25 +0000},
+	Journal = {Coindesk},
+	Keywords = {20},
+	Lastchecked = {Feb. 14, 2018},
+	Month = {July},
+	Title = {Ethereum Executes Blockchain Hard Fork to Return DAO Funds},
+	Url = {https://www.coindesk.com/ethereum-executes-blockchain-hard-fork-return-dao-investor-funds/},
+	Year = {2016}}
+
+@conference{Hirai17,
+	Author = {Hirai Y.},
+	Booktitle = {Financial Cryptography and Data Security},
+	Date-Added = {2018-02-14 17:38:28 +0000},
+	Date-Modified = {2018-02-14 17:40:53 +0000},
+	Editor = {Brenner M. et al.},
+	Pages = {520-535},
+	Publisher = {Springer, Cham},
+	Series = {Lecture Notes in Computer Science},
+	Title = {Defining the Ethereum Virtual Machine for Interactive Theorem Provers},
+	Volume = {10323},
+	Year = {2017}}
+
+@article{Magazzeni17,
+	Author = {D. Magazzeni and P. McBurney and W. Nash},
+	Date-Added = {2018-02-14 17:36:57 +0000},
+	Date-Modified = {2018-02-14 17:37:51 +0000},
+	Journal = {Computer},
+	Number = {9},
+	Pages = {50-57},
+	Title = {Validation and Verification of Smart Contracts: A Research Agenda},
+	Volume = {50},
+	Year = {2017}}
+
 @book{NBFMG16,
 	Author = {A Narayanan and J Bonneau and Edward W. Felten and Andrew Miller and Steven Goldfeder},
 	Date-Added = {2017-01-27 17:50:48 +0000},
 	Date-Modified = {2017-01-27 17:52:43 +0000},
 	Publisher = {Princeton},
-	Title = {Bitcoin and Cryptocurrency Technologies },
+	Title = {Bitcoin and Cryptocurrency Technologies},
 	Year = {2016}}
 
 @inproceedings{DBBCB15,
