Changes to assignments.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -40,6 +40,7 @@ Scott's suggestions:
 \end{enumerate}
 
 \input{sections/introduction}
+\input{sections/academic}
 \input{sections/methodology}
 \input{sections/results}
 \input{sections/criteria}
