--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -1,5 +1,5 @@
 % !TEX root = ../main.tex
 
-\section{Conclusion}
+\section{Conclusion (Scott)}
 
 Blockchain is good when used right. Let's use it correctly!
