--- a/paper/sections/criteria.tex
+++ b/paper/sections/criteria.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../main.tex
 
-\section{Lessons Learned (Scott)}
+\section{Lessons Learned (Scott/Ben)}
 
 What was missing in the graph?
 	Off-chain stapling
