--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../main.tex
 
-\section{Introduction (Rob/Arkady/Jeremy)}
+\section{Introduction (Scott)}
 Short history of Bitcoin (1--2 paragraphs)
 	Summary of the research ideas that are part of Blockchain (Jeremy's article)
 	Bitcoin itself
@@ -15,5 +15,3 @@ Why industry?
 	Most of the interesting work is happening outside of academia
 		Academia is more focused on important, but more ticky-tacky details
 		Industry has built up knowledge around Blockchain, its properties, and its uses
-
-Open question: how do we integrate what we've learned from academia into the intro and elsewhere in the paper.
