Finished challenges and limitations.

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1,12 +1,50 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Kaiser, Benjamin - 0553 - MITLL at 2018-02-14 13:00:10 -0500 
+%% Created for Kaiser, Benjamin - 0553 - MITLL at 2018-04-02 13:06:19 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{BlockchainInfoPools,
+	Author = {Blockchain.info},
+	Date-Added = {2018-04-02 17:05:07 +0000},
+	Date-Modified = {2018-04-02 17:06:14 +0000},
+	Lastchecked = {04/02/2018},
+	Title = {Blockchain Hashrate Distribution Chart},
+	Url = {https://blockchain.info/pools}}
+
+@misc{Digiconomist,
+	Author = {Digiconomist.net},
+	Date-Added = {2018-04-02 16:35:09 +0000},
+	Date-Modified = {2018-04-02 16:37:16 +0000},
+	Lastchecked = {04/02/2018},
+	Title = {Bitcoin Energy Consumption Index},
+	Url = {https://digiconomist.net/bitcoin-energy-consumption}}
+
+@misc{Poon16,
+	Author = {Poon, Joseph; Dryja, Thaddeus},
+	Date-Added = {2018-04-02 16:14:54 +0000},
+	Date-Modified = {2018-04-02 16:15:28 +0000},
+	Month = {Jan},
+	Title = {The Bitcoin Lightning Network: Scalable Off-Chain Instant Payments},
+	Year = {2016}}
+
+@misc{NakamotoS8,
+	Author = {Satoshi Nakamoto},
+	Date-Added = {2018-04-02 16:01:32 +0000},
+	Date-Modified = {2018-04-02 16:05:00 +0000},
+	Title = {Bitcoin: A Peer-to-Peer Electronic Cash System; Sec. 8}}
+
+@misc{BlockchainInfoSize,
+	Author = {Blockchain.info},
+	Date-Added = {2018-04-02 15:47:59 +0000},
+	Date-Modified = {2018-04-02 17:05:03 +0000},
+	Lastchecked = {04/02/2018},
+	Title = {Blockchain Size Chart},
+	Url = {https://blockchain.info/charts/blocks-size}}
 
 @inproceedings{Androulaki13,
 	Author = {Androulaki, Elli and Karame, Ghassan O. and Roeschlin, Marc and Scherer, Tobias and Capkun, Srdjan},
@@ -37,10 +75,6 @@
 	Volume = {abs/1708.04748},
 	Year = {2017}}
 
-@misc{cite-key,
-	Date-Added = {2018-02-14 17:48:04 +0000},
-	Date-Modified = {2018-02-14 17:48:04 +0000}}
-
 @misc{Castillo16,
 	Author = {Michael del Castillo},
 	Date-Added = {2018-02-14 17:41:25 +0000},
@@ -51,7 +85,8 @@
 	Month = {July},
 	Title = {Ethereum Executes Blockchain Hard Fork to Return DAO Funds},
 	Url = {https://www.coindesk.com/ethereum-executes-blockchain-hard-fork-return-dao-investor-funds/},
-	Year = {2016}}
+	Year = {2016},
+	Bdsk-Url-1 = {https://www.coindesk.com/ethereum-executes-blockchain-hard-fork-return-dao-investor-funds/}}
 
 @conference{Hirai17,
 	Author = {Hirai Y.},
@@ -404,3 +439,22 @@
 	Pages = {41--53},
 	Title = {Towards an information theoretic metric for anonymity},
 	Year = {2003}}
+
+@inproceedings{Zhang16,
+	Acmid = {2978326},
+	Address = {New York, NY, USA},
+	Author = {Zhang, Fan and Cecchetti, Ethan and Croman, Kyle and Juels, Ari and Shi, Elaine},
+	Booktitle = {Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+	Doi = {10.1145/2976749.2978326},
+	Isbn = {978-1-4503-4139-4},
+	Keywords = {authenticated data feeds, bitcoin, ethereum, intel SGX, smart contracts, trusted hardware},
+	Location = {Vienna, Austria},
+	Numpages = {13},
+	Pages = {270--282},
+	Publisher = {ACM},
+	Series = {CCS '16},
+	Title = {Town Crier: An Authenticated Data Feed for Smart Contracts},
+	Url = {http://doi.acm.org/10.1145/2976749.2978326},
+	Year = {2016},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2976749.2978326},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2976749.2978326}}
